--- a/css/index.css
+++ b/css/index.css
@@ -8,13 +8,9 @@ header{
   color: blue;
 }
 .image img{
-  width: 100%;
-  height: 100vh !important;
-}
-.image{
-  height: 100vh !important;
-}
-
+  width: 100% !important;
+  height: auto !important;
+} 
 .hero-section.index{
   background-image: linear-gradient(  to bottom right, rgba(255, 255, 255, 0.836), rgba(255, 166, 0, 0.601));
 } 
@@ -71,17 +67,9 @@ transform: scale(1.1);
   }
 }
 @media(max-width:576px){
- .image img{
-  height: 80vh !important;
- }
  .slide{
   padding: 0 20px !important;
  }
-}
-@media(max-width:406px){
-  .image img{
-    height: 70vh !important;
-   }
 }
 @media(max-width:347px){
 
@@ -97,7 +85,5 @@ font-size: 12px;
 .btn-danger a{
   font-size: 12px;
 }
-.image img{
-  height: 60vh !important;
- }
+
 }
